[package]
name = "iunit"
version = "0.1.0"
authors = ["Giles Cope <gilescope@gmail.com>"]

[lib]
doctest = false

[dependencies]
# Shame this isn't a build-dependency. You would think a compiler plugin could be just that.
trait_tests="0.1.2"

#rand="*"
eclectic = {version="0.11", optional=true}
num = { version="*", optional=true }
num-traits= { version="*", optional=true }

[badges]
travis-ci = { repository = "gilescope/iunit", branch = "master" }

[features]
default = [ "num_tests", "eclectic_tests" ]
num_tests = ["num", "num-traits"]
eclectic_tests = ["eclectic"]
